@@ -4,11 +4,13 @@ DIST febootstrap-2.7.tar.gz 516193 RMD160 fe8b87070b5f5c2f0084b0d27b9028fefefbab
 DIST febootstrap-2.8.tar.gz 545573 RMD160 bdf95ce81989352afe516be078cb9902c7d539cc SHA1 e8fe265cb16bc286c24facc4bed6a428ef174f0a SHA256 956cc16f2a193f229e3b9e5943003b63f45d835fe37a2a289f7e72ff3b0e7735
 DIST febootstrap-3.0.tar.gz 560017 RMD160 17203e3cd51663fb861e83580436e01e4846b94b SHA1 b1b62c22d94ed78f8ac383261634c7b994fd9fdc SHA256 f8ef2cf917b9931deb7568f346e31062d564a44a7951ec5307868ae5496979bd
 DIST febootstrap-3.2.tar.gz 566106 RMD160 5ae6eb67572a8ba70b484a7676bec1027bd9eaf8 SHA1 ce1207f1ba3edd2412471ff58252cf0b18017d9c SHA256 12581a54f23c7917bcb267b2cf1be38c7f3bec63754d77caf613fa4bc55a5b11
+DIST febootstrap-3.3.tar.gz 566400 RMD160 5b3b2d234338be3fe165a9f201a7b3d469e352e9 SHA1 ed8d66c8e44ce4ff8c1fb4a343acd85892be8ace SHA256 9df92f68959315dc9252b1009cc28d98b24074813635b5ae8501a7a0f5617ea8
 EBUILD febootstrap-2.10.ebuild 688 RMD160 a276d0477cb4c2b27a707cf787fa367d46f3fde7 SHA1 fe5d3221bdbd87f01cb4beff9fab1caee61ac0e1 SHA256 b1be8184dc84ad838623d3d88318cc24949b95284ec3675b7b5c109de85d8ae4
 EBUILD febootstrap-2.11.ebuild 688 RMD160 a276d0477cb4c2b27a707cf787fa367d46f3fde7 SHA1 fe5d3221bdbd87f01cb4beff9fab1caee61ac0e1 SHA256 b1be8184dc84ad838623d3d88318cc24949b95284ec3675b7b5c109de85d8ae4
 EBUILD febootstrap-2.7.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
 EBUILD febootstrap-2.8.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
 EBUILD febootstrap-3.0.ebuild 604 RMD160 6cdc72e1b33942aeff41f0d553ccf391a1e11527 SHA1 8c940e1b0cadd0ceab9d52d78d05b7d51aea5c49 SHA256 433c72520c4e4932782650f6575988e38acda972c73b24f692d8122d14672c87
 EBUILD febootstrap-3.2.ebuild 604 RMD160 6cdc72e1b33942aeff41f0d553ccf391a1e11527 SHA1 8c940e1b0cadd0ceab9d52d78d05b7d51aea5c49 SHA256 433c72520c4e4932782650f6575988e38acda972c73b24f692d8122d14672c87
-MISC ChangeLog 952 RMD160 d22cb923c9cfd65dd577817f06b1984ee2184a61 SHA1 7cc04cd2f6108fe776409aed4e90845c063b55ee SHA256 248770dcb515b93a6081b28fe3324e48412608216b2083831cd5032a372b4e32
+EBUILD febootstrap-3.3.ebuild 604 RMD160 6cdc72e1b33942aeff41f0d553ccf391a1e11527 SHA1 8c940e1b0cadd0ceab9d52d78d05b7d51aea5c49 SHA256 433c72520c4e4932782650f6575988e38acda972c73b24f692d8122d14672c87
+MISC ChangeLog 1050 RMD160 4e359caf90dfd0fce19d9a49eb3e013f18498282 SHA1 b9dfd8f678986641354c80c87e7c4a2f681ea218 SHA256 845239230f1d551e43d28682d901688b3217838c34d05c9bd94c6c86efe88f75
 MISC metadata.xml 234 RMD160 999fab2c5a4c8873483e0398d546c46ba7db2244 SHA1 3d5a13a261145e4709af5370bea86199398cfe87 SHA256 dacedc07094188052fc35617485c22f7e7ea2914326c8df6a671fc6584930efc
