@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*febootstrap-3.3 (15 Dec 2010)
+
+  15 Dec 2010; <slep@gentoo.org> +febootstrap-3.3.ebuild:
+  bump
+
 *febootstrap-3.2 (09 Dec 2010)
 
   09 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru> +febootstrap-3.2.ebuild:
